Fix uneven vertical spacing around <sup> and <sub>

--- a/app/assets/stylesheets/general_styles.sass
+++ b/app/assets/stylesheets/general_styles.sass
@@ -11,6 +11,9 @@ img
 a
   color: #63A0C9
 
+sub, sup
+  line-height: 1
+
 table.default
   border: 0
   border-collapse: collapse
